--- a/Projects/ProjectKB/ProjectKBWindow.xaml
+++ b/Projects/ProjectKB/ProjectKBWindow.xaml
@@ -84,15 +84,28 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <Grid Visibility="Visible" Height="32">
-                        <StackPanel HorizontalAlignment="Left"  Orientation="Horizontal">
-                            <Button Grid.Column="0" Background="#01FFFFFF" BorderThickness="0"  VerticalAlignment="Center" Command="{Binding OpenConfigCommand}" >
-                                <TextBlock Text="&#xE713;" FontFamily="Segoe MDL2 Assets" FontSize="15"  Padding="0,5" Foreground="{DynamicResource GlobalTextBrush}"/>
+                        <ToolBar Height="32">
+                            <Button  Command="{Binding OpenConfigCommand}" Padding="0" Height="24" Width="24" Margin="5,0,0,0"> 
+                                <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="18" RenderTransformOrigin="0.5,0.5"  Foreground="{DynamicResource GlobalTextBrush}">
+                                    <TextBlock.RenderTransform>
+                                        <RotateTransform x:Name="rotateTransform21"/>
+                                    </TextBlock.RenderTransform>
+                                </TextBlock>
+                                <Button.Triggers>
+                                    <EventTrigger RoutedEvent="Button.Click">
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <DoubleAnimation Storyboard.TargetName="rotateTransform21" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </EventTrigger>
+                                </Button.Triggers>
                             </Button>
-                            <Button Click="Button_Click_Clear" Background="#01FFFFFF" BorderThickness="0">
-                                <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageDelete}" Margin="4" />
+                            <Button Click="Button_Click_Clear"  Padding="0" Height="24" Width="24" Margin="5,0,0,0">
+                                <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageDelete}" Margin="2" />
                             </Button>
 
-                        </StackPanel>
+                        </ToolBar>
                     </Grid>
 
                     <ListView  x:Name="listView1" Grid.Row="1"   BorderThickness="0" Padding="0" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" Grid.RowSpan="2" >
