--- a/Projects/ProjectKB/ProjectKBWindow.xaml
+++ b/Projects/ProjectKB/ProjectKBWindow.xaml
@@ -80,13 +80,13 @@
                 </Grid>
                 <Grid x:Name="Grid1" Grid.Row="1" Height="{Binding Height}">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="32"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Grid Visibility="Visible" Height="32">
-                        <ToolBar Height="32">
-                            <Button  Command="{Binding OpenConfigCommand}" Padding="0" Height="24" Width="24" Margin="5,0,0,0"> 
-                                <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="18" RenderTransformOrigin="0.5,0.5"  Foreground="{DynamicResource GlobalTextBrush}">
+                    <Grid Visibility="Visible" >
+                        <StackPanel Orientation="Horizontal" Background="{DynamicResource RegionBrush}">
+                            <Button  Command="{Binding OpenConfigCommand}" Padding="0" Height="25" Width="25" Margin="5,0,0,0"> 
+                                <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" RenderTransformOrigin="0.5,0.5"  Foreground="{DynamicResource GlobalTextBrush}">
                                     <TextBlock.RenderTransform>
                                         <RotateTransform x:Name="rotateTransform21"/>
                                     </TextBlock.RenderTransform>
@@ -101,14 +101,14 @@
                                     </EventTrigger>
                                 </Button.Triggers>
                             </Button>
-                            <Button Click="Button_Click_Clear"  Padding="0" Height="24" Width="24" Margin="5,0,0,0">
+                            <Button Click="Button_Click_Clear"  Padding="0" Height="25" Width="25" Margin="5,0,0,0">
                                 <Image  Stretch="Uniform" Source="{DynamicResource DrawingImageDelete}" Margin="2" />
                             </Button>
 
-                        </ToolBar>
+                        </StackPanel>
                     </Grid>
 
-                    <ListView  x:Name="listView1" Grid.Row="1"   BorderThickness="0" Padding="0" SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" Grid.RowSpan="2" >
+                    <ListView  x:Name="listView1" Grid.Row="1"   BorderThickness="0" Padding="0"  SelectionChanged="listView1_SelectionChanged"  PreviewKeyDown="listView1_PreviewKeyDown" Grid.RowSpan="2" >
                         <ListView.Resources >
                             <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" />
                         </ListView.Resources>
