--- a/Projects/ProjectARVR/ProjectKBWindow.xaml
+++ b/Projects/ProjectARVR/ProjectKBWindow.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="ProjectsARVR.ProjectKBWindow"
+﻿<Window x:Class="ProjectARVR.ProjectKBWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
-        xmlns:local="clr-namespace:ProjectsARVR"
-        xmlns:properties ="clr-namespace:ProjectsARVR.Properties"
+        xmlns:local="clr-namespace:ProjectARVR"
+        xmlns:properties ="clr-namespace:ProjectARVR.Properties"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:ProjectKBConfig}"
-        Title="键盘测试" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized" Icon="/ProjectKB;component/Assets/ProjectKB.png">
+        d:DataContext="{d:DesignInstance local:ProjectARVRConfig}"
+        Title="ARVR检测" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized" Icon="/ProjectKB;component/Assets/ProjectKB.png">
     <Window.Resources>
         <local:ConnectConverter x:Key="ConnectConverter"/>
         <local:OKNGConverter x:Key="OKNGConverter"/>
@@ -251,9 +251,6 @@
             </StatusBarItem>
             <StatusBarItem>
                 <Button Content="自述文件" Command="{Binding OpenReadMeCommand}"/>
-            </StatusBarItem>
-            <StatusBarItem>
-                <Button Content="Test" Click="Button_Click"/>
             </StatusBarItem>
         </StatusBar>
 
