--- a/Engine/ColorVision.Engine/Services/Devices/Algorithm/DisplayAlgorithm.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Algorithm/DisplayAlgorithm.xaml
@@ -55,7 +55,7 @@
                 <Button x:Name="ButtonUnauthorized" Margin="0,0,0,3" Content="未注册" Command="{Binding EditCommand}"/>
                 <StackPanel x:Name="StackPanelContent">
                     <DockPanel Margin="0,2">
-                        <TextBlock Text="算法" Margin="0,0,5,0" MinWidth="62"/>
+                        <ComboBox x:Name="CB_AlgorithmTypes"  Style="{StaticResource ComboBox.Small}" Width="130" Margin="0,0,5,0" />
                         <ComboBox x:Name="CB_Algorithms"  Style="{StaticResource ComboBox.Small}" DisplayMemberPath="Name" />
                     </DockPanel>
                     <StackPanel x:Name="CB_StackPanel">
