--- a/Projects/ProjectKB/Modbus/ModbusConnect.xaml
+++ b/Projects/ProjectKB/Modbus/ModbusConnect.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ProjectsARVR.ModbusConnect"
+﻿<Window x:Class="ProjectKB.ModbusConnect"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProjectsARVR"
+        xmlns:local="clr-namespace:ProjectKB"
         xmlns:hc ="https://handyorg.github.io/handycontrol"
-        xmlns:properties="clr-namespace:ProjectsARVR.Properties"
+        xmlns:properties="clr-namespace:ProjectKB.Properties"
         mc:Ignorable="d"
         Title="Modbus配置" Background="{DynamicResource GlobalBackground}"  Height="500" Width="400" Initialized="Window_Initialized">
     <Window.Resources>
