--- a/Projects/ProjectKB/ProjectKBWindow.xaml
+++ b/Projects/ProjectKB/ProjectKBWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="ProjectKB.ProjectKBWindow"
+﻿<Window x:Class="ProjectARVR.ProjectKBWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
-        xmlns:local="clr-namespace:ProjectKB"
-        xmlns:properties ="clr-namespace:ProjectKB.Properties"
+        xmlns:local="clr-namespace:ProjectARVR"
+        xmlns:properties ="clr-namespace:ProjectARVR.Properties"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:ProjectKBConfig}"
         Title="键盘测试" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized" Icon="/ProjectKB;component/Assets/ProjectKB.png">
