--- a/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
+++ b/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
@@ -11,8 +11,10 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel>
+        <StackPanel Orientation="Horizontal">
             <Button Content="执行" Click="Button_Click"/>
+            <Button Content="备份数据库" Click="Button_Click_1"/>
+            <Button Content="恢复备份数据库" Click="Button_Click_2"/>
         </StackPanel>
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
