--- a/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
+++ b/Engine/ColorVision.Engine/MySql/MySqlToolWindow.xaml
@@ -23,22 +23,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel>
+        <StackPanel Margin="0,0,0,5">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Text="ServiceName:"/>
-                <TextBlock Text="{Binding ServiceName}"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="ImagePath:"/>
                 <TextBlock Text="{Binding ImagePath}"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="MysqlPath:"/>
-                <TextBlock Text="{Binding MysqlPath}"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="MysqldumpPath:"/>
-                <TextBlock Text="{Binding MysqldumpPath}"/>
             </StackPanel>
         </StackPanel>
 
@@ -53,12 +40,15 @@
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Horizontal" Grid.Row="0">
-                    <Button Content="备份数据库" Click="Button_Click_1"/>
-                    <Button Content="资源备份" Click="Button_Click_2"/>
+                    <Button Content="备份数据库" Command="{Binding BackupDatabaseCommand}" Margin="0,0,5,0"/>
+                    <Button Content="备份资源" Command="{Binding BackupResourcesCommand}"   Margin="0,0,5,0"/>
+                    <Button Content="加载备份" Command="{Binding RestoreSelectCommand}" Background="Red" Foreground="White"/>
                 </StackPanel>
+                
                 <ListView Grid.Row="1" x:Name="listView1" Background="Transparent" Margin="0" Padding="0" BorderThickness="0" ItemsSource="{Binding Backups}">
                     <ListView.ItemContainerStyle>
                         <Style TargetType="{x:Type ListViewItem}" BasedOn="{StaticResource ListViewItemBaseStyle.Small}">
+                            <Setter Property="ContextMenu" Value="{Binding ContextMenu}"/>
                         </Style>
                     </ListView.ItemContainerStyle>
                     <ListView.View>
@@ -70,7 +60,6 @@
                                     <Setter Property="BorderThickness" Value="0"/>
                                 </Style>
                             </GridView.ColumnHeaderContainerStyle>
-
                             <GridViewColumn Header="文件名">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
@@ -81,7 +70,10 @@
                             <GridViewColumn Header="还原">
                                 <GridViewColumn.CellTemplate>
                                     <DataTemplate>
-                                        <Button Content="还原" Command="{Binding RestoreCommand}"/>
+                                        <StackPanel Orientation="Horizontal">
+                                            <Button Content="还原" Command="{Binding RestoreCommand}" Margin="0,0,5,0"/>
+                                            <Button Content="选中" Command="{Binding SelectCommand}"/>
+                                        </StackPanel>
                                     </DataTemplate>
                                 </GridViewColumn.CellTemplate>
                             </GridViewColumn>
@@ -104,8 +96,8 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <TextBox x:Name="MySqlText" Margin="0,10" Height="150" Text="" Padding="5" TextWrapping ="WrapWithOverflow" AcceptsReturn="True" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0" />
-                    <TextBox x:Name="SqlResultText" Grid.Row="1" Padding="5" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" />
+                    <TextBox x:Name="MySqlText" Margin="0,10" Height="150" Text="" Padding="5" TextWrapping ="WrapWithOverflow" AcceptsReturn="True" VerticalContentAlignment="Top" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="1" />
+                    <TextBox x:Name="SqlResultText" Grid.Row="1" Padding="5" ScrollViewer.VerticalScrollBarVisibility="Auto" BorderThickness="1"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" />
 
                 </Grid>
 
