--- a/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationControl.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationControl.xaml
@@ -29,9 +29,8 @@
                 <Border Style="{StaticResource BorderModuleArea}"  CornerRadius="5" Margin="0">
                     <StackPanel Margin="5">
                         <DockPanel >
-                            <Button DockPanel.Dock="Right" Content="配置" Click="Button_Click"  Margin="5,0"/>
+                            <Button DockPanel.Dock="Right" Content="模板组管理" Click="Button_Click"  Margin="5,0"/>
                             <Button x:Name="uploadbutton" d:DataContext="{d:DesignInstance phy:PhyCamera}" DockPanel.Dock="Right" Content="上传" Command="{Binding UploadCalibrationCommand}"  Margin="5,0"/>
-                            <TextBlock DockPanel.Dock="Left" Text="校正文件"  Width="80" />
                             <hc:ComboBox x:Name="ComboBoxList" Text="{Binding CalibrationMode}" DisplayMemberPath="Name" />
                         </DockPanel>
                     </StackPanel>
@@ -40,42 +39,42 @@
                     <StackPanel Margin="5">
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="暗噪声"  Width="80" />
-                            <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding  Normal.DarkNoise.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding  Normal.DarkNoise.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False"  Text="{Binding  Normal.DarkNoise.FilePath}"/>
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="DSNU" Width="80"  />
-                            <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.DSNU.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.DSNU.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding  Normal.DSNU.FilePath}"  />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="缺陷点" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.DefectPoint.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.DefectPoint.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding  Normal.DefectPoint.FilePath}" />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="色偏" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.ColorShift.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.ColorShift.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding  Normal.ColorShift.FilePath}" />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="畸变" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.Distortion.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.Distortion.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding  Normal.Distortion.FilePath}" />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="均匀场" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.Uniformity.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.Uniformity.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Normal.Uniformity.FilePath}" />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="LineArity" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.LineArity.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.LineArity.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Normal.LineArity.FilePath}" />
                         </DockPanel>
                         <DockPanel>
                             <TextBlock DockPanel.Dock="Left" Text="ColorDiff" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.ColorDiff.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Normal.ColorDiff.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Normal.ColorDiff.FilePath}" />
                         </DockPanel>
                     </StackPanel>
@@ -84,22 +83,22 @@
                     <StackPanel Margin="5">
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="亮度" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.Luminance.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.Luminance.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Color.Luminance.FilePath}"  />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="单色" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.LumOneColor.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.LumOneColor.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Color.LumOneColor.FilePath}" />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="四色" Width="80"  />
-                            <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.LumFourColor.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox  VerticalAlignment="Center" DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.LumFourColor.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Color.LumFourColor.FilePath}"  />
                         </DockPanel>
                         <DockPanel  Margin="0,0,0,5">
                             <TextBlock DockPanel.Dock="Left" Text="多色" Width="80"  />
-                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.LumMultiColor.IsSelected}"   Margin="5,0" Width="40"/>
+                            <CheckBox VerticalAlignment="Center"  DockPanel.Dock="Right" Content="" IsChecked="{Binding Color.LumMultiColor.IsSelected}"   Margin="5,0" Width="20"/>
                             <TextBox IsEnabled="False" Text="{Binding Color.LumMultiColor.FilePath}" />
                         </DockPanel>
                     </StackPanel>
