--- a/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationEdit.xaml
+++ b/Engine/ColorVision.Engine/Services/PhyCameras/Group/CalibrationEdit.xaml
@@ -33,6 +33,7 @@
                 <Button Content="删除" Click="Button_Delete_Click" Margin="0,0,5,0" />
                 <Button Content="上传" Command="{Binding UploadCalibrationCommand}" />
                 <Button Content="导出" Click="Export_Click"/>
+                <Button Content="创建校正" Command="{Binding OepnCalibrationToolCommand}"/>
             </StackPanel>
             <ListView  x:Name="ListView1" Grid.Row="0" Style="{DynamicResource ListView.Small}"   ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionChanged="ListView1_SelectionChanged" Padding="0,5,0,0">
                 <ListView.ItemContainerStyle>
