--- a/Engine/ColorVision.Engine/Templates/Jsons/DFOV/DisplayDFOV.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/DFOV/DisplayDFOV.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.DFOV.DisplayDFOV"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.FOV2.DisplayFOV2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.Templates.Jsons.DFOV"
+             xmlns:local="clr-namespace:ColorVision.Engine.Templates.Jsons.FOV2"
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance local:AlgorithmDFOV}"
+             d:DataContext="{d:DesignInstance local:AlgorithmFOV2}"
              d:DesignHeight="300" d:DesignWidth="300" Initialized="UserControl_Initialized">
     <Grid>
         <StackPanel>
