--- a/Engine/ColorVision.Engine/Templates/Jsons/GhostQK/DisplayGhostQK.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/GhostQK/DisplayGhostQK.xaml
@@ -1,12 +1,12 @@
-﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.GhostQK.DisplayGhostQK"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.Ghost2.DisplayGhostQK"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.Engine.Templates.Jsons.GhostQK"
+             xmlns:local="clr-namespace:ColorVision.Engine.Templates.Jsons.Ghost2"
              xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
              mc:Ignorable="d" 
-             d:DataContext="{d:DesignInstance local:AlgorithmGhostQK}"
+             d:DataContext="{d:DesignInstance local:AlgorithmGhost2}"
              d:DesignHeight="300" d:DesignWidth="300" Initialized="UserControl_Initialized">
     <Grid>
         <StackPanel>
