--- a/Engine/ColorVision.Engine/Templates/Jsons/GhostQK/DisplayGhost2.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/GhostQK/DisplayGhost2.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.Ghost2.DisplayGhostQK"
+﻿<UserControl x:Class="ColorVision.Engine.Templates.Jsons.Ghost2.DisplayGhost2"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
