--- a/Engine/ColorVision.Engine/Templates/Jsons/EditTemplateJson.xaml
+++ b/Engine/ColorVision.Engine/Templates/Jsons/EditTemplateJson.xaml
@@ -34,6 +34,7 @@
             <Button x:Name="DescriptionButton" Content="注释" Margin="0,0,5,0" Click="Button_Click" Visibility="Collapsed"/>
             <Button Content="校验Json" Margin="0,0,5,0" Command="{Binding CheckCommand}"/>
             <Button Content="编辑工具" Command="{Binding OpenEditToolCommand}"/>
+            <Button Content="在线json解析" Click="Button_Click_1"/>
             <Button Content="重置" Command="{Binding ResetCommand}"/>
         </StackPanel>
         
