--- a/Engine/ColorVision.Engine/Templates/Flow/FlowEngineToolWindow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/FlowEngineToolWindow.xaml
@@ -11,7 +11,7 @@
         mc:Ignorable="d"
         PreviewKeyDown="UserControl_PreviewKeyDown"
         d:DataContext="{d:DesignInstance local:FlowEngineToolWindow}"
-        Title="{x:Static properties:Resources.WorkflowEngineDebugWindow}" Height="700" Width="1000"  Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
+        Title="{x:Static properties:Resources.WorkflowEngineDebugWindow}" Height="720" Width="1280"  Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
     <Window.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
@@ -47,12 +47,24 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions >
-                <ColumnDefinition Width="200"/>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="300"/>
             </Grid.ColumnDefinitions>
             <Grid >
                 <Grid.RowDefinitions>
                     <RowDefinition Height="300"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                </Grid.RowDefinitions>
+
+            </Grid>
+            <WindowsFormsHost Grid.Column="0" >
+                <st:STNodeEditor  x:Name="STNodeEditorMain"  MouseDown="STNodeEditorMain_MouseDown" MouseUp="STNodeEditorMain_MouseUp" MouseMove="STNodeEditorMain_MouseMove" MouseWheel="STNodeEditorMain_MouseWheel"/>
+            </WindowsFormsHost>
+
+            <Grid  Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="250"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
@@ -62,15 +74,10 @@
                     </WindowsFormsHost>
                 </ScrollViewer>
                 <StackPanel x:Name="SignStackPannel" Grid.Row="1" Orientation="Vertical" Margin="3" />
-
                 <WindowsFormsHost Grid.Row="2">
                     <st:STNodePropertyGrid x:Name="STNodePropertyGrid1" />
                 </WindowsFormsHost>
-
             </Grid>
-            <WindowsFormsHost Grid.Column="1" >
-                <st:STNodeEditor  x:Name="STNodeEditorMain"  MouseDown="STNodeEditorMain_MouseDown" MouseUp="STNodeEditorMain_MouseUp" MouseMove="STNodeEditorMain_MouseMove" MouseWheel="STNodeEditorMain_MouseWheel"/>
-            </WindowsFormsHost>
         </Grid>
     </Grid>
 </Window>
