--- a/ColorVision/Plugins/PluginManagerWindow.xaml
+++ b/ColorVision/Plugins/PluginManagerWindow.xaml
@@ -88,8 +88,8 @@
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate  DataType="{x:Type local:PluginInfo}">
                                     <StackPanel Orientation="Horizontal">
-                                        <Button Content="Delete" Command="{Binding DeleteCommand}"  Margin="0,0,5,0"/>
-                                        <Button Content="Update" Command="{Binding UpdateCommand}"  Margin="0,0,5,0"/>
+                                        <Button Content="{x:Static properties:Resources.Delete}" Command="{Binding DeleteCommand}"  Margin="0,0,5,0"/>
+                                        <Button Content="{x:Static properties:Resources.Update}" Command="{Binding UpdateCommand}"  Margin="0,0,5,0"/>
                                     </StackPanel>
                                 </DataTemplate>
                             </GridViewColumn.CellTemplate>
