--- a/ColorVision/MainWindow.xaml
+++ b/ColorVision/MainWindow.xaml
@@ -17,14 +17,12 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Border Grid.Row="0"  Height="27" BorderBrush="{DynamicResource BorderBrush}" WindowChrome.IsHitTestVisibleInChrome="True" Background="{DynamicResource GlobalBackground}" >
+        <Border Grid.Row="0" BorderBrush="{DynamicResource BorderBrush}" WindowChrome.IsHitTestVisibleInChrome="True" Background="{DynamicResource GlobalBackground}" >
             <DockPanel>
                 <Grid DockPanel.Dock="Right" Margin="0,0,10,0">
                     <Image Source="{DynamicResource DrawingImageUser}"  Width="20"/>
                     <Button Background="Transparent" BorderThickness="0"  Width="20"/>
                 </Grid>
-
-           
                 <Popup x:Name="SearchPopup" AllowsTransparency="true" Focusable="false" PopupAnimation="{DynamicResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Bottom" StaysOpen="false" PlacementTarget="{Binding ElementName=Searchbox}">
                     <Border Margin="5" Style="{StaticResource BorderModuleArea}" Width="210" Height="500">
                         <ListView  x:Name="ListView1" Background="Transparent" BorderThickness="0"  ScrollViewer.HorizontalScrollBarVisibility="Disabled"  ScrollViewer.VerticalScrollBarVisibility="Auto" SelectionChanged="ListView1_SelectionChanged" MouseDoubleClick="ListView1_MouseDoubleClick">
@@ -56,10 +54,8 @@
                         </ListView>
                     </Border>
                 </Popup>
-                <StackPanel Orientation="Horizontal">
-                    <Menu x:Name="Menu1" Background="Transparent" VerticalAlignment="Center" />
-                </StackPanel>
-                <Grid Margin="10,1" Width="210" HorizontalAlignment="Left" VerticalAlignment="Center" >
+                <Menu x:Name="Menu1" Background="Transparent" HorizontalAlignment="Left" Padding="2"/>
+                <Grid x:Name="SearchGrid" Margin="10,1" Width="210" HorizontalAlignment="Left" VerticalAlignment="Center" >
                     <hc:TextBox x:Name="Searchbox"  Style="{DynamicResource TextBoxPlus.Small}" Padding="20,1,2,1"  BorderThickness="1"  hc:InfoElement.Placeholder="{x:Static properties:Resources.Search}" BorderBrush="#CCCEDB" MaxLength="15"  VerticalContentAlignment="Center" PreviewKeyDown="Searchbox_PreviewKeyDown" TextChanged="Searchbox_TextChanged"  />
                     <Viewbox Width="12 " Height="12" HorizontalAlignment="Left" Margin="4,0,0,0">
                         <Rectangle Width="16 " Height="16" >
