--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -27,7 +27,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Border Grid.Row="0"  Background="{DynamicResource SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5" CornerRadius="5">
+            <Border Grid.Row="0"  Background="{DynamicResource SecondaryRegionBrush}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" Margin="5,0,5,5" CornerRadius="5">
                 <StackPanel Margin="5">
                     <Grid Margin="0,0,0,10">
                         <Viewbox>
@@ -107,7 +107,7 @@
                 </StackPanel>
             </Border>
 
-            <ListView  x:Name="listViewRecord" Grid.Row="1"   BorderThickness="0" Padding="0"  Margin="5,0,5,5"  >
+            <ListView  x:Name="listViewRecord" Grid.Row="1"  Visibility="Collapsed" BorderThickness="0" Padding="0"  Margin="5,0,5,5"  >
                 <ListView.Resources >
                     <ContextMenu x:Key="ItemContextMenu" Opened="ContextMenu_Opened" />
                 </ListView.Resources>
